@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST flog-2.4.0.gem 18944 RMD160 aba46754188b90f464acf8088ccf84e52c4b696d SHA1 8cd922591ebe6ac37a50d28022b33e7847927683 SHA256 2bbf984d6a326463f496f20b49333b58c064da80f1a388e2b0e53ec50c9ede4d
 DIST flog-2.5.0.gem 19968 RMD160 4206414bfc5af1dfa91fb19403d95978ba84fd06 SHA1 7aa65f3c1b259bda77cac2e20aced6800c35a4a7 SHA256 e5f044764783175d34a6bf65cb7934ad2ae306b3555ea1dd41ac6fac9eb218b4
+DIST flog-2.5.1.gem 19968 RMD160 8858892a218db1c1f4d89c1c96bde92be77b6636 SHA1 456eacc94e839e51359e3266f51602ea49114e4f SHA256 e1dbb5238224744820cf31e451aab8f5b43257b42a68b2b4a6e816b865345824
 EBUILD flog-2.4.0.ebuild 627 RMD160 5210a01c42a7a079f8c9f908cef0dfb5c0a794b9 SHA1 943631187727cf6007ab122f10f0c5526ab9b322 SHA256 044aae907fd6a90b36d76e82fb6afbda9873f781bb06d58e5103aa48bd00c6ed
 EBUILD flog-2.5.0.ebuild 617 RMD160 762e704800220476272eb16e74067795949a4f00 SHA1 732f773e1e40f6f0a13cd87eb12e249b51bcc773 SHA256 58d6dbfd26ec078324e11e887bcff76a54d1e79375b6adce54eb52fc83cac094
-MISC ChangeLog 820 RMD160 6cfa1d590a04b5d3f1e057d6019b7f8de611c4bd SHA1 47a44f6de3660d3b40be41b81014c02ff3b4c7de SHA256 0f1c4d19b35185d8ec99217ecb5a0de3eb2f702235e286ec3256e32932c1d689
+EBUILD flog-2.5.1.ebuild 617 RMD160 0d801f6ab4f5d934c6b2223ffbcf49d323147b14 SHA1 9445457e135aa538231375bf8f250418337622f3 SHA256 bf14c1c4932937b6ff6e0fe0ad384b4a7ea512e1a14fbf78a6016049c1fe968e
+MISC ChangeLog 934 RMD160 3f17de2d65e61a3d40687d6e18c6450824e8e994 SHA1 9a3d1a2094f4a45bf5c93ab4ddc34790fd5cc7fa SHA256 2fa38fc4960de38fba69f082ce110d7d0659d735bec0bad72709009ff208352f
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAkybZM0ACgkQZihJkut28Sv26AD+O8LC4wJ/RB2tg8rkeQyF87SM
-IUTbkq78C+n4xOHJ5owA/0gBQjXr8AgOM7XuhdIQWbPpb0juLch4ogt6vCQg83mA
-=zRBH
+iF4EAREIAAYFAk10u3QACgkQrnu0mw69JkrTtAEAi7y3SwHV0Z3HvYiDBXNA3noE
+a7p0fsIn43P75Jkd26UA/iCqU8ZLuguxJNsX5H7vwZjxLj9a7zK6VWTFcj/rUfSH
+=RwuC
 -----END PGP SIGNATURE-----
