@@ -1,5 +1,10 @@
 # ChangeLog for dev-ruby/flog
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+
+*flog-2.5.1 (07 Mar 2011)
+
+  07 Mar 2011; Hans de Graaff <graaff@gentoo.org> +flog-2.5.1.ebuild:
+  Version bump.
 
 *flog-2.5.0 (23 Sep 2010)
 
